@@ -144,6 +144,7 @@ gl_FUNC_STRERROR
 gl_FUNC_GLIBC_UNLOCKED_IO
 gt_FUNC_ERROR_AT_LINE
 gl_QUOTEARG
+gl_QUOTE
 gl_PATHMAX
 gl_FUNC_READLINK
 gl_XREADLINK
